# neoway-challenge

./: README.md  eda.ipynb  models.ipynb  pyproject.toml
b2w_reviews/: logs.py  models.py  tests.py  text_process.py
