[tool.poetry]
name = "neoway-poetry"
version = "0.1.0"
description = ""
authors = ["joao.miranda <jpfmirandaa@gmail.com>"]
readme = "README.md"
packages = [{include = "neoway_poetry"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
plotly = "^5.13.1"
nltk = "^3.8.1"
nbformat = "^5.7.3"
ipykernel = "^6.21.2"
scikit-learn = "^1.2.1"
xgboost = "^1.7.4"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
